--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,156 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
+    --border-radius: 1rem;
+    --primary-light: white;
+    --primary-light-transp1: rgba(255, 255, 255, 0.7);
+    --primary-light-transp2: rgba(255, 255, 255, 0.4);
+    --primary-dark: black;
+    --dark-transparent: rgba(0, 0, 0, 0.85);
+    --secondary-color: #8c8c8c;
+    --secondary-transp1: #8c8c8cee;
+    --icdt-color: #73CEE2;
+    --shadow: 0.4rem 0.4rem 0.6rem #00000040;
+    --darker-shadow: 0.3rem 0.3rem 0.3rem #000000aa;
+    --blur: blur(3px);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html,
+body {
+    pointer-events: none;
+    overflow: hidden;
+}
+
+::-webkit-scrollbar {
+    width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
+
+#root {
+    width: 100vw;
+    height: 100vh;
+    pointer-events: none;
+}
+
+#top-gradient {
+    z-index: 1;
+    position: absolute;
+    width: 100%;
+    height: 7rem;
+    background-image: linear-gradient(180deg, black, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0));
+}
+
+#top-container {
+    display: flex;
+    padding: 1.5rem;
+    z-index: 5;
+    position: absolute;
+    width: 100%;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+
+.selectors {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    pointer-events: all;
+}
+
+.selector {
+    z-index: 1;
+    background-color: var(--primary-light);
+    padding: 0.7rem;
+    margin: 0.5rem;
+    font-weight: 500;
+    border: none;
+    border-radius: 0.5rem;
+    cursor: pointer;
+    align-items: center;
+    height: 36.8px;
+    width: 262px;
+    font-size: 0.8rem;
+    text-transform: uppercase;
+    pointer-events: all;
+}
+
+.mapboxgl-map {
+    position: absolute;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    pointer-events: all;
+}
+
+.white-icon {
+    padding: 1.2rem;
+}
+
+.white-icon svg {
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    width: fit-content;
+    width: 1.5rem;
+    height: 1.5rem;
+    fill: var(--primary-light);
+    stroke: rgba(0, 0, 0, 0.3);
+    stroke-width: 1px;
+    stroke-linejoin: round;
+    pointer-events: all;
+}
+
+.white-icon:hover>svg {
+    fill: var(--icdt-color);
+    scale: 1.05;
+}
+
+.icon:hover {
+    scale: 1.05;
+}
+
+.row {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: flex-start;
+    align-items: center;
+}
+
+.column {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+.mapboxgl-ctrl-top-left {
+    margin: 1.7rem 8.2rem;
+}
+
+.all-pointer-events {
+    pointer-events: all;
+    cursor: pointer;
+}
+
+.hidden {
+    display: none;
+    pointer-events: none;
 }
