--- a/src/index.css
+++ b/src/index.css
@@ -137,15 +137,11 @@ body {
 .row {
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
-    align-content: flex-start;
-    align-items: center;
 }
 
 .column {
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
 }
 
 .mapboxgl-ctrl-top-left {
@@ -157,22 +153,36 @@ body {
     cursor: pointer;
 }
 
-.right-menu {
+#right-menu {
     z-index: 1;
     position: absolute;
     display: flex;
     background-color: var(--dark-transparent);
-    padding: 6rem 0.2rem;
+    padding-top: 7rem;
     top: 0px;
     right: 0px;
     height: 100vh;
-    align-items: flex-end;
-    flex-direction: column;
+    width: fit-content;
+    align-items: flex-start;
+    flex-direction: row;
     font-weight: 300;
     font-size: 0.7rem;
     color: var(--primary-light);
     pointer-events: all;
-    overflow: auto;
+    overflow-x: hidden;
+}
+
+#right-menu-buttons {
+    flex-direction: column;
+}
+
+#right-menu-container {
+    width: 200px;
+    height: fit-content;
+    background-color: red;
+    top: 0px;
+    overflow-y: auto;
+
 }
 
 .mapboxgl-ctrl-bottom-right {
@@ -197,10 +207,6 @@ body {
     background-color: #888;
 }
 
-.hidden {
-    display: none;
-    pointer-events: none;
-}
 
 ::-webkit-scrollbar {
     width: 5px;
@@ -219,4 +225,9 @@ body {
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
     background: #555;
+}
+
+.hidden {
+    display: none !important;
+    pointer-events: none !important;
 }
