--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,8 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
+    font-style: normal;
+    letter-spacing: 0.08em;
     --border-radius: 1rem;
     --primary-light: white;
     --primary-light-transp1: rgba(255, 255, 255, 0.7);
@@ -13,9 +15,6 @@
     --secondary-transp1: #8c8c8cee;
     --icdt-color: #73CEE2;
     --selected-button: #93B9E2;
-    --shadow: 0.4rem 0.4rem 0.6rem #00000040;
-    --darker-shadow: 0.3rem 0.3rem 0.3rem #000000aa;
-    --blur: blur(3px);
 }
 
 html,
@@ -24,23 +23,43 @@ body {
     overflow: hidden;
 }
 
+h2 {
+    font-size: 34px;
+    font-weight: 700;
+    line-height: 38px;
+}
+
+h3 {
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 20px;
+}
+
+h4 {
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 20px;
+}
+
 ::-webkit-scrollbar {
-    width: 5px;
+    width: 4px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-    background: #f1f1f1;
+    background: #282828;
+    border-radius: 2px;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-    background: #888;
+    background: #D9D9D9;
+    border-radius: 2px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-    background: #555;
+    background: #777;
 }
 
 #root {
@@ -59,36 +78,12 @@ body {
 
 #top-bar {
     display: flex;
-    padding: 1.3rem 0.2rem 1.3rem 1.3rem;
-    z-index: 2;
+    padding: 1.3rem 0rem 1.3rem 1.3rem;
+    z-index: 4;
     position: absolute;
     width: 100%;
     flex-direction: row;
     justify-content: space-between;
-}
-
-.selectors {
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    pointer-events: all;
-}
-
-.selector {
-    z-index: 1;
-    background-color: var(--primary-light);
-    padding: 0.7rem;
-    margin: 0.5rem;
-    font-weight: 500;
-    border: none;
-    border-radius: 0.5rem;
-    cursor: pointer;
-    align-items: center;
-    height: 36.8px;
-    width: 262px;
-    font-size: 0.8rem;
-    text-transform: uppercase;
-    pointer-events: all;
 }
 
 .mapboxgl-map {
@@ -144,6 +139,11 @@ body {
     flex-direction: column;
 }
 
+.space-between {
+    display: flex;
+    justify-content: space-between;
+}
+
 .mapboxgl-ctrl-top-left {
     margin: 1.7rem 8.2rem;
 }
@@ -153,12 +153,12 @@ body {
     cursor: pointer;
 }
 
-#right-menu {
-    z-index: 1;
+#right-menu-container {
+    z-index: 3;
     position: absolute;
     display: flex;
     background-color: var(--dark-transparent);
-    padding-top: 7rem;
+    padding-top: 1rem;
     top: 0px;
     right: 0px;
     height: 100vh;
@@ -169,20 +169,35 @@ body {
     font-size: 0.7rem;
     color: var(--primary-light);
     pointer-events: all;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 #right-menu-buttons {
+    padding-top: 6rem;
     flex-direction: column;
 }
 
-#right-menu-container {
-    width: 200px;
+#right-menu {
+    width: fit-content;
     height: fit-content;
-    background-color: red;
     top: 0px;
-    overflow-y: auto;
+    flex-direction: column;
+}
 
+#right-menu-title {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+#right-menu-title>h2 {
+    padding: 0 1rem;
+}
+
+#right-menu-content {
+    overflow-y: auto;
+    padding-top: 4rem;
+    height: calc(88vh)
 }
 
 .mapboxgl-ctrl-bottom-right {
@@ -205,26 +220,6 @@ body {
     position: absolute;
     top: 0;
     background-color: #888;
-}
-
-
-::-webkit-scrollbar {
-    width: 5px;
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-    background: #f1f1f1;
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-    background: #888;
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-    background: #555;
 }
 
 .hidden {
