--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@
     --secondary-color: #8c8c8c;
     --secondary-transp1: #8c8c8cee;
     --icdt-color: #73CEE2;
-    --selected-button: #93B9E2;
+    --icdt-color2: #96C0D5;
 }
 
 html,
@@ -28,8 +28,6 @@ h2 {
     font-weight: 700;
     line-height: 38px;
 }
-
-
 
 h3 {
     font-size: 20px;
@@ -50,6 +48,26 @@ h4 {
 
 .effect h4 {
     font-weight: 500;
+}
+
+h5 {
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 38px;
+    color: rgba(255, 255, 255, 0.7);
+}
+
+.menu-button {
+    background-color: rgba(255, 255, 255, 0.12);
+    border: 1px solid rgba(255, 255, 255, 0.12);
+    border-radius: 12px;
+    font-size: 14px;
+    color: var(--icdt-color2);
+    padding: 0.8rem 1.2rem
+}
+
+.message {
+    padding: 10rem;
 }
 
 ::-webkit-scrollbar {
@@ -143,7 +161,7 @@ h4 {
 #right-menu {
     width: fit-content;
     height: fit-content;
-    padding-top: 1.2rem;
+    padding-top: 1rem;
     top: 0px;
     padding-right: 2rem;
     flex-direction: column;
@@ -151,15 +169,41 @@ h4 {
 
 #right-menu-header {
     display: flex;
+    width: fit-content;
+    white-space: nowrap;
     flex-direction: row;
     align-items: center;
     padding: 0.5rem;
 }
 
-#right-menu-body {
+.right-menu-body {
     overflow-y: auto;
-    padding: 3.5rem 3.5rem 0 0;
-    height: calc(88vh)
+    padding: 2.5rem 1rem 0 0;
+    height: 88vh;
+}
+
+.right-menu-table-two-rows {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    white-space: nowrap;
+    padding-left: 1rem;
+}
+
+.right-menu-table-two-rows>* {
+    width: 50%;
+}
+
+.right-menu-form {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 4rem;
+    white-space: nowrap;
 }
 
 .mapboxgl-map {
@@ -198,11 +242,10 @@ h4 {
     transition: all 0.3s ease 0s;
 }
 
-.selected-button>svg {
-    fill: var(--selected-button);
+.icdt-color2>svg {
+    fill: var(--icdt-color2);
     scale: 1.02;
 }
-
 
 .row {
     display: flex;
