--- a/src/index.css
+++ b/src/index.css
@@ -57,6 +57,25 @@ h5 {
     color: rgba(255, 255, 255, 0.7);
 }
 
+.menu-input {
+    text-rendering: auto;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 23px;
+    text-shadow: none;
+    text-align: start;
+    text-indent: 0.8rem;
+    cursor: text;
+    background-color: var(--primary-light);
+    margin: 0.2rem;
+    padding: 1px 2px;
+    border-width: 2px;
+    border: none;
+    height: 50px;
+    width: 300px;
+    border-radius: 12px;
+}
+
 .menu-button {
     background-color: rgba(255, 255, 255, 0.12);
     border: 1px solid rgba(255, 255, 255, 0.12);
@@ -66,8 +85,15 @@ h5 {
     padding: 0.8rem 1.2rem
 }
 
+.menu-button:hover {
+    background-color: rgba(255, 255, 255, 0.20);
+}
+
+
 .message {
-    padding: 10rem;
+    padding: 8rem 2rem;
+    background-color: var(--icdt-color2);
+    height: 100vh;
 }
 
 ::-webkit-scrollbar {
@@ -194,7 +220,7 @@ h5 {
     width: 50%;
 }
 
-.right-menu-form {
+.right-menu-center {
     display: flex;
     width: 100%;
     height: 100%;
@@ -204,6 +230,7 @@ h5 {
     gap: 1rem;
     padding: 4rem;
     white-space: nowrap;
+    text-align: center;
 }
 
 .mapboxgl-map {
