--- a/src/index.css
+++ b/src/index.css
@@ -36,8 +36,8 @@ h3 {
 }
 
 .effect:hover {
-    font-weight: 800;
-    scale: 1.015;
+    font-weight: 600;
+    scale: 1.01;
 }
 
 h4 {
@@ -46,16 +46,13 @@ h4 {
     line-height: 20px;
 }
 
-.effect h4 {
-    font-weight: 500;
-}
-
 h5 {
     font-size: 16px;
     font-weight: 300;
     line-height: 38px;
     color: rgba(255, 255, 255, 0.7);
 }
+
 
 .menu-input {
     text-rendering: auto;
@@ -82,7 +79,8 @@ h5 {
     border-radius: 12px;
     font-size: 14px;
     color: var(--icdt-color2);
-    padding: 0.8rem 1.2rem
+    padding: 0.8rem 1.2rem;
+    width: fit-content;
 }
 
 .menu-button:hover {
@@ -169,6 +167,7 @@ h5 {
     background-color: var(--dark-transparent);
     width: auto;
     align-items: flex-start;
+    justify-content: flex-end;
     flex-direction: row;
     color: var(--primary-light);
     overflow: hidden;
@@ -202,6 +201,27 @@ h5 {
     padding: 0.5rem;
 }
 
+#share-view-window {
+    position: absolute;
+    background-color: var(--dark-transparent);
+    z-index: 3;
+    border-radius: var(--border-radius);
+    width: 430px;
+    height: 330px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: var(--primary-light);
+    pointer-events: all;
+    padding: 0.5rem;
+    gap: 1rem;
+}
+
+#share-view-window svg {
+    margin: 0 0.8rem;
+}
+
 .right-menu-body {
     overflow-y: auto;
     padding: 2.5rem 1rem 0 0;
@@ -231,6 +251,7 @@ h5 {
     padding: 4rem;
     white-space: nowrap;
     text-align: center;
+    align-items: center;
 }
 
 .mapboxgl-map {
@@ -277,6 +298,7 @@ h5 {
 .row {
     display: flex;
     flex-direction: row;
+    align-items: center;
 }
 
 .column {
@@ -322,6 +344,19 @@ h5 {
     pointer-events: all;
 }
 
+.full-page-flex {
+    position: fixed;
+    z-index: 2;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    top: 0;
+    left: 0;
+    pointer-events: none;
+}
+
 .full-page-iframe {
     z-index: 2;
     width: 100vw;
@@ -329,6 +364,10 @@ h5 {
     position: absolute;
     top: 0;
     background-color: #888;
+}
+
+.pointer {
+    cursor: pointer;
 }
 
 .hidden {
