--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,7 @@ h3 {
 }
 
 .effect:hover {
-    font-weight: 600;
+    font-weight: 500;
     scale: 1.01;
 }
 
@@ -81,6 +81,7 @@ h5 {
     color: var(--icdt-color2);
     padding: 0.8rem 1.2rem;
     width: fit-content;
+    cursor: pointer;
 }
 
 .menu-button:hover {
@@ -202,7 +203,6 @@ h5 {
 }
 
 #share-view-window {
-    position: absolute;
     background-color: var(--dark-transparent);
     z-index: 3;
     border-radius: var(--border-radius);
@@ -224,7 +224,7 @@ h5 {
 
 .right-menu-body {
     overflow-y: auto;
-    padding: 2.5rem 1rem 0 0;
+    padding: 2.5rem 0 0 0;
     height: 88vh;
 }
 
@@ -234,6 +234,9 @@ h5 {
     justify-content: space-between;
     white-space: nowrap;
     padding-left: 1rem;
+    pointer-events: all;
+    cursor: pointer;
+
 }
 
 .right-menu-table-two-rows>* {
