--- a/src/index.css
+++ b/src/index.css
@@ -97,6 +97,7 @@ h5 {
 
 ::-webkit-scrollbar {
     width: 4px;
+    height: 4px;
 }
 
 /* Track */
@@ -199,7 +200,7 @@ h5 {
     white-space: nowrap;
     flex-direction: row;
     align-items: center;
-    padding: 0.5rem;
+    padding: 0.5rem 2rem;
 }
 
 #share-view-window {
@@ -223,9 +224,10 @@ h5 {
 }
 
 .right-menu-body {
-    overflow-y: auto;
+    overflow: auto;
     padding: 2.5rem 0 0 0;
     height: 88vh;
+    max-width: 50vw;
 }
 
 .right-menu-table-two-rows {
