--- a/src/index.css
+++ b/src/index.css
@@ -227,6 +227,7 @@ h5 {
     overflow: auto;
     padding: 2.5rem 0 0 1.5rem;
     height: 88vh;
+    width: max-content;
     max-width: 60vw;
 }
 
@@ -235,7 +236,7 @@ h5 {
     flex-wrap: wrap;
     justify-content: space-between;
     white-space: nowrap;
-    padding-left: 1rem;
+    padding: 0 1rem;
     pointer-events: all;
     cursor: pointer;
 }
@@ -245,7 +246,8 @@ h5 {
     border: none;
     width: 20px;
     height: 23px;
-    padding: 0px;
+    margin-left: 1rem;
+    padding: 2px;
 }
 
 .right-menu-table-two-rows>* {
@@ -272,6 +274,10 @@ h5 {
     width: 100%;
     height: 100%;
     pointer-events: all;
+}
+
+.mapboxgl-marker {
+    cursor: pointer;
 }
 
 .icon {
