--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@
     --secondary-transp1: #8c8c8cee;
     --icdt-color: #73CEE2;
     --icdt-color2: #96C0D5;
+    --shadow: 0.4rem 0.4rem 0.6rem #00000040;
 }
 
 html,
@@ -51,6 +52,47 @@ h5 {
     font-weight: 300;
     line-height: 38px;
     color: rgba(255, 255, 255, 0.7);
+}
+
+table {
+    color: var(--primary-light);
+    font-size: 14px;
+    font-weight: 300;
+    color: rgba(255, 255, 255, 0.7);
+    font-family: 'Roboto', sans-serif;
+    font-style: normal;
+    text-align: left;
+}
+
+th {
+    background-color: var(--secondary-color);
+}
+
+td {
+    padding-right: 10px;
+}
+
+.mapboxgl-popup-content {
+    background: var(--dark-transparent) !important;
+    width: fit-content;
+    box-shadow: var(--shadow) !important;
+    max-width: fit-content !important;
+}
+
+.mapboxgl-popup-anchor-top .mapboxgl-popup-tip {
+    border-bottom-color: var(--dark-transparent) !important;
+}
+
+.mapboxgl-popup-anchor-bottom .mapboxgl-popup-tip {
+    border-top-color: var(--dark-transparent) !important;
+}
+
+.mapboxgl-popup-anchor-left .mapboxgl-popup-tip {
+    border-right-color: var(--dark-transparent) !important;
+}
+
+.mapboxgl-popup-anchor-right .mapboxgl-popup-tip {
+    border-left-color: var(--dark-transparent) !important;
 }
 
 
@@ -231,6 +273,10 @@ h5 {
     gap: 1rem;
 }
 
+/* td {
+    background-color: yellow;
+} */
+
 .right-menu-body {
     overflow: auto;
     padding: 2.5rem 0 0 1.5rem;
@@ -359,7 +405,7 @@ svg:hover {
 }
 
 .mapboxgl-ctrl-bottom-right {
-    visibility: collapse;
+    right: auto !important;
 }
 
 .hamburger-react>div {
